# agentbelt

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
agentbelt/: __init__.py  __main__.py  app.py  budget.py  cli.py  config.py  dash.py  egress.py  pdp.py  plugins.py  provenance.py  redteam.py  risk.py  risk_semantic.py  scope.py  shim.py  telemetry.py  tooltier.py  types.py  validate.py
agentbelt/contrib/: __init__.py  example_plugin.py
clients/typescript/: README.md  package.json  tsconfig.json
clients/typescript/src/: index.ts
config/: burritobot.yaml
docs/: RELEASING.md  configurability.md  harness-design.md  incidents.md  open-questions.md  roadmap.md  threat-model.md
docs/decisions/: ADR-0001-interception-contract.md  ADR-0002-provenance-model.md  ADR-0003-cedar-policy-schema.md  ADR-0004-multi-turn-risk.md  ADR-0005-plugin-interface.md  ADR-0006-naming-and-distribution.md  README.md
docs/lld/: dash-and-test-commands.md  data-exfiltration-slice.md  in-process-shim.md  multi-turn-risk-and-tiering.md  mvp-denial-of-wallet-slice.md  plugin-interface.md
docs/spikes/: provenance-model.md
seatbelt/: __init__.py  __main__.py  app.py  budget.py  cli.py  config.py  dash.py  egress.py  mcp_discovery.py  pdp.py  plugins.py  provenance.py  redteam.py  risk.py  risk_semantic.py  scope.py  shim.py  telemetry.py  tooltier.py  types.py  validate.py
seatbelt/contrib/: __init__.py  example_plugin.py
tests/: test_budget.py  test_cli.py  test_dash.py  test_egress.py  test_integration.py  test_mcp_discovery.py  test_pdp.py  test_plugins.py  test_provenance.py  test_redteam.py  test_risk.py  test_risk_semantic.py  test_scope.py  test_shim.py  test_tooltier.py  test_validate.py
