[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "seatbelt-harness"
version = "0.1.0"
description = "A pluggable protective harness for conversational AI agents — drop-in OpenAI-compatible proxy that defends against jailbreaks, prompt injection, data exfiltration, and denial-of-wallet."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["llm", "security", "prompt-injection", "jailbreak", "guardrails", "ai-agents", "cedar"]
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "httpx>=0.27",
    "pyyaml>=6",
    "cedarpy>=4.7",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
seatbelt = "seatbelt.cli:main"

[project.urls]
Homepage = "https://github.com/ayuan153/seatbelt"

[tool.setuptools.packages.find]
include = ["seatbelt*"]
