[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "agentbelt-harness"
version = "0.1.1"
description = "A pluggable protective harness for conversational AI agents — drop-in OpenAI-compatible proxy that defends against jailbreaks, prompt injection, data exfiltration, and denial-of-wallet."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Agentbelt contributors" }]
keywords = ["llm", "security", "prompt-injection", "jailbreak", "guardrails", "ai-agents", "cedar"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "httpx>=0.27",
    "pyyaml>=6",
    "cedarpy>=4.7",
    "rich>=13",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
agentbelt = "agentbelt.cli:main"

[project.urls]
Homepage = "https://github.com/ayuan153/agentbelt"
Repository = "https://github.com/ayuan153/agentbelt"
Documentation = "https://github.com/ayuan153/agentbelt/tree/main/docs"
Issues = "https://github.com/ayuan153/agentbelt/issues"
Releases = "https://github.com/ayuan153/agentbelt/releases"

[tool.setuptools.packages.find]
include = ["agentbelt*"]
